--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body">
     <h2>後台管理系統</h2>
-    <hr>
+    <hr class="hr">
     <div class="adminBody">
         <div class="adminSelect">
             <div class="adminSelection" onclick="showAllUser()">使用者列表</div>
