--- a/templates/bom.html
+++ b/templates/bom.html
@@ -9,7 +9,7 @@
 <body class="body">
     <div class="bodylist"></div>
 
-    <hr>
+    <hr class="hr">
     <a href="{{ url_for('static', filename='bom_template.xlsx') }}" download="bom_template.xlsx">下載模板(功能開發中)</a>
     <br>    
     <br>
