--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
 </head>
     <body class="body">
     <div class="bodylist"></div>
-    <hr>
+    <hr class="hr">
     <div class="contactus">
         <div class="contacttext">
             <div class="contactcontent">聯繫窗口: Jason.Lin</div>
