--- a/templates/list.html
+++ b/templates/list.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body">
     <div class="bodylist"></div>
-    <hr>
+    <hr class="hr">
     <!--
     <div class="iteminfo">
         <div>產品資訊</div>
@@ -18,10 +18,10 @@
     </div>
     <hr>
     -->
+    <div class="ptbg">
     <div class="ptdata">
         <div class="productlist_title">自有庫存</div>
-        <div></div>
-        </hr>
+    </hr>
     
     <div class="table_area">
     <table class="output_table" border="1">
@@ -77,8 +77,11 @@
     </table>
     </div>
     </div>
+    </div>    
+   </div>
 
-    <hr>
+   <hr class="hr">
+   <div class="ptbg">
     <div class="partnerdata">
         <div class="productlist_title">代理商庫存</div>
         <div>
@@ -102,19 +105,24 @@
         </div>
 
     </div>
-    <hr>
-    <div class="productlist_title">產品資料</div>
-    <div class="productlist_title">產品照片參考:</div>
-    <div class="productInfo">
-      <div class="product-img"></div><br><br>
     </div>
-    <div class="productlist_title">代理商圖片及連結:<span class="getAgentInfo" onclick="getproductinfo()">取得產品規格連結</span></div>
+    <hr class="hr">
+    <div class="ptbg">
+        <div class="productdata">
+          <div class="productlist_title">產品資料</div>
+          <div class="descrip_title">產品照片參考:</div>
+          <div class="productInfo">
+            <div class="product-img"></div><br><br>
+          </div>
+          <div class="descrip_title">代理商圖片及連結:<span class="getAgentInfo" onclick="getproductinfo()">取得產品規格連結</span></div>
 
-      <div class="productInfo">
-      <span class="displayImageInfo"></span>
-      <span class="displayProductInfo"></span>
+            <div class="productInfo">
+            <span class="displayImageInfo"></span>
+            <span class="displayProductInfo"></span>
+          </div>
+          <br><br>
+        </div>
     </div>
-    <br><br>
 
 
 
